Wed, 14 May 2008 15:34:25 +0200 <thp@perli.net>
Download start performance improvements; fix podcast list handling

	* data/gpodder.glade: Convert the gPodderAddPodcastDialog from a
	GtkWindow to a real GtkDialog to make Escape key work and set the URL
	entry box to activate the "Add" button when Enter is pressed in it
	* src/gpodder/gui.py: Fix podcast selection in updateComboBox, so the
	currect podcast is selected when removing/adding podcasts; allow to
	pass a URL which should be selected after the update; use
	DownloadStatusManager's new batch mode to speed up starting many
	downloads at once (very visible speed improvement); adding podcasts
	has also been improved a bit with the new code
	* src/gpodder/services.py: Support batch mode (i.e. only notify after
	all episodes have been added to th download list); this speeds up the
	UI when multiple episodes are downloaded at once

Wed, 14 May 2008 11:59:20 +0200 <thp@perli.net>
Updated Russian translation by Vladimir Zemlyakov

	* data/po/ru.po: Updated Russian translation by Vladimir Zemlyakov

Mon, 12 May 2008 11:38:55 +0200 <thp@perli.net>
Fix a crasher with ExpatError when trying to parse an invalid itms:// URL

	* src/gpodder/gui.py: Give an error message when adding a channel that
	doesn't result in a valid URL being returned
	* src/gpodder/util.py: Improve handling of itms:// URLs that are not
	valid iTunes Podcast links, so they don't crash; thanks to Ralph on
	Launchpad for reporting this bug
	(Closes: https://bugs.launchpad.net/ubuntu/+source/gpodder/+bug/214113)

Mon, 12 May 2008 11:26:43 +0200 <thp@perli.net>
Fix race condition in is_download_in_progress()

	* src/gpodder/services.py: Make sure we behave correctly when items in
	the download list disappear while we are iterating over the list of
	downloads when trying to find out if a download is already in progress
	* src/gpodder/gui.py: Add SPGoetze to list of bug reporters
	(Closes: https://bugs.launchpad.net/ubuntu/+source/gpodder/+bug/208964)
