@@ -1,3 +1,10 @@
+Fri, 16 May 2008 10:02:23 +0200 <thp@perli.net>
+Add option to not hide channel cover and pill when the sidebar gets smaller
+
+	* src/gpodder/config.py: Add "podcast_sidebar_save_space" option
+	* src/gpodder/gui.py: Don't hide the channel cover and pill in the
+	podcast list when the sidebar gets smaller; idea by Shane Donohoe
+
 Wed, 14 May 2008 15:34:25 +0200 <thp@perli.net>
 Download start performance improvements; fix podcast list handling
 
